-Made RESET button read "start over" -changed some game text -fixed dragon and bear isAudio object property -added newline for every win/ lose and some text for spacing -Added styling

--- a/adventure/index.css
+++ b/adventure/index.css
@@ -3,10 +3,11 @@
     padding-bottom: 15px;
     color: Orange;
     text-align:center;
+    text-shadow: 1px 1px #F00;
 }
 
 body { 
-    font-family: Arial, sans-serif; 
+    font-family: Georgia, 'Times New Roman', Times, serif;
     padding: 2em; 
     background: #111; 
     color: #eee;
@@ -54,7 +55,7 @@ main {
 button { 
     margin: 0.5em;
     margin-top: 55px;
-    margin-right: 30px;
+    margin-left: 25px;
     padding: 0.5em 1em; 
     font-size: 1em; 
     background: #444; 
@@ -70,8 +71,10 @@ button:hover {
     color: white; 
 }
     
-#game-image {
-  justify-content: left;
+.game-image {
+  align-items: left;
+  height: 200px;
+  width: 250px;
 }
 
 pre { 
@@ -82,4 +85,5 @@ footer {
     color:orange;
     text-align: center;
     padding: 1em;
+    text-shadow: 1px 1px #F00;
 }
